# readme-generator

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: analysis.rs  checker.rs  generator.rs  lib.rs  main.rs  scoring.rs
tests/: integration_tests.rs
