[package]
name = "readme-generator"
version = "0.1.0"
edition = "2021"
description = "Auto-generate high-quality READMEs from Rust crate source code"
license = "MIT"
repository = "https://github.com/SuperInstance/readme-generator"

[[bin]]
name = "readme-generator"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
proc-macro2 = "1"
anyhow = "1"
colored = "2"
similar = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
